# game-project-course

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  run.sh  runtests.sh
configuration/: Config.hpp.in
doc/: timesheet.md
res/fonts/indie-flower/: source
res/fonts/patrick-hand/: source
res/fonts/permanent-marker/: source.txt
res/fonts/rubik-bubbles/: source
res/fonts/teko/: source.txt
res/music/ogg-short-loopable-background-music/: source
res/sounds/8bit/: source
res/tilesets/freetileset/: source
src/: Background.cpp  Background.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Constants.cpp  Constants.hpp  Font.cpp  Font.hpp  Game.cpp  Game.hpp  GameLevel.cpp  GameLevel.hpp  GameObject.cpp  GameObject.hpp  Geometry.cpp  Geometry.hpp  Helpers.cpp  Helpers.hpp  Image.cpp  Image.hpp  Input.cpp  Input.hpp  Label.cpp  Label.hpp  Logger.cpp  Logger.hpp  Main.cpp  Menu.cpp  Menu.hpp  Mixer.cpp  Mixer.hpp  Music.cpp  Music.hpp  Overlays.cpp  Overlays.hpp  Physics.cpp  Physics.hpp  (+18 more)
test/: CMakeLists.txt  ColorTest.cpp  GeometryTest.cpp  LoggerTest.cpp  PhysicsTest.cpp  TimetoolsTest.cpp
